layerX/layerY warning should be removed https://bugs.webkit.org/show_bug.cgi?id=86264

Reviewed by James Robinson.

Source/WebCore:

Covered by: fast/dom/Window/window-xy-properties.html
            fast/events/init-events.html
            fast/events/mouse-relative-position.html
            fast/events/mouseclick-target-and-positioning.html
            fast/events/simulated-click-coords.html
            jquery/event.html

This change just removes the warning pending proper investigation.

Longer explanation: The layerX/layerY warning was added prematurely
as we didn't assess the web-compatibility potential breakage vs the
maintenance cost. There is also not readily available replacement.

* dom/MouseRelatedEvent.cpp:
(WebCore::MouseRelatedEvent::layerX):
(WebCore::MouseRelatedEvent::layerY):
* dom/UIEvent.cpp:
(WebCore::UIEvent::layerX):
(WebCore::UIEvent::layerY):
* dom/UIEvent.h:
Removed warnDeprecatedLayerXYUsage and all the associated calls.

LayoutTests:

Removed console message about layerX/layerY deprecation.

* fast/dom/Window/window-xy-properties-expected.txt:
* fast/events/init-events-expected.txt:
* fast/events/mouse-relative-position-expected.txt:
* fast/events/mouseclick-target-and-positioning-expected.txt:
* fast/events/simulated-click-coords-expected.txt:
* jquery/event-expected.txt:
* platform/qt/fast/events/mouse-relative-position-expected.txt:


Canonical link: https://commits.webkit.org/104253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117335 268f45cc-cd09-0410-ab3c-d52691b4dbfc