Source/WebCore/dom/MouseRelatedEvent.cpp
@@ -196,7 +196,6 @@ void MouseRelatedEvent::computeRelativePosition()
 
 int MouseRelatedEvent::layerX()
 {
-    warnDeprecatedLayerXYUsage();
     if (!m_hasCachedRelativePosition)
         computeRelativePosition();
     return m_layerLocation.x();
@@ -204,7 +203,6 @@ int MouseRelatedEvent::layerX()
 
 int MouseRelatedEvent::layerY()
 {
-    warnDeprecatedLayerXYUsage();
     if (!m_hasCachedRelativePosition)
         computeRelativePosition();
     return m_layerLocation.y();
